tests/suite/analyze/snapshots/suite__analyze__copy_propagation__clobbered_across_hul.snap
---
source: tests/suite/analyze/copy_propagation.rs
assertion_line: 67
expression: copy_propagation
---

clobbered_across_hul

+--------------------+
|       enter:       |
| {}                 |
| mov rax, _a        |
| {rax: _a}          |
| mov rdx, _a        |
| {rax: _a, rdx: _a} |
| imul 1             |
| {}                 |
| jmp exit           |
| {}                 |
+--------------------+
  |
  |
  v
+--------------------+
|       exit:        |
| {}                 |
| ret                |
| {}                 |
+--------------------+

