tests/suite/analyze/snapshots/suite__analyze__copy_propagation__defined_twice_different.snap
---
source: tests/suite/analyze/copy_propagation.rs
assertion_line: 53
expression: copy_propagation
---

     defined_twice_different

+--------------+     +------------+
|              |     |   enter:   |
| fallthrough: |     | {}         |
| {_d: _a}     |     | cmp _a, _b |
| mov _a, _b   |     | {}         |
| {_a: _b}     |     | mov _d, _a |
| jmp exit     |     | {_d: _a}   |
| {_a: _b}     |     | jne branch |
|              | <-- | {_d: _a}   |
+--------------+     +------------+
  |                    |
  |                    |
  |                    v
  |                  +------------+
  |                  |  branch:   |
  |                  | {_d: _a}   |
  |                  | mov _a, _c |
  |                  | {_a: _c}   |
  |                  | jmp exit   |
  |                  | {_a: _c}   |
  |                  +------------+
  |                    |
  |                    |
  |                    v
  |                  +------------+
  |                  |   exit:    |
  |                  | {}         |
  |                  | ret        |
  +----------------> | {}         |
                     +------------+

